# orion-dudect

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  run_benches.sh  run_benches_debug.sh  run_benches_nightly.sh  run_benches_nightly_debug.sh  run_benches_nightly_release.sh  run_benches_release.sh  run_benches_stable.sh  run_benches_stable_debug.sh  run_benches_stable_release.sh
.github/workflows/: weekly.yml  workflow_audit.yml
bench-results/: secure_cmp.txt
ct-bencher/: constant_time_eq.rs  ct_benches.rs  custom.rs  newtype.rs  newtype_slice.rs  orion.rs  poly1305.rs  secure_cmp.rs  subtle.rs  subtle_from.rs
old_ci/: .travis.yml  appveyor.yml
src/: lib.rs
