[package]
name = "orion-dudect"
version = "0.1.0"
authors = ["brycx <brycx@protonmail.com>"]
edition = "2018"

[dependencies]
dudect-bencher = "0.4.1"
rand = "0.7"
orion = { git = "https://github.com/brycx/orion/", branch = "verify-new" }
clap = "2.33"
ctrlc = "3.1"
regex = "1"
rand_chacha = "0.2.1"

[features]
nightly = [ "orion/nightly" ]

[[bin]]
name = "ct_benches"
path = "ct-bencher/ct_benches.rs"